# Desain-Model-

./: AllProcesstoBuffers.java  AllRunExecutions.java  AllRunModules.java  AnyActions.java  CMakeLists.txt  Classifications.java  Clusterizing.java  End.java  ExecutedProcess.java  Function.java  HardWareAccess.java  InterfaceforAgentExecManager.java  Localizer.java  MemoryAccess.java  Parameters.java  README.md  Registers.java  SysCallReader.java  UsingIO.java  UsingSystem.java  model_Main.cpp  model_Model.h
